syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.lamnguyen.payment_service.protos";
option java_outer_classname = "BaseProto";

service BaseService {
  rpc Greeting (BaseRequest) returns (BaseResponse);
}

message BaseRequest {
  string name = 1;
}

message BaseResponse {
  string response = 1;
}